Implement automated draw.io file conversion and Teams notification workflow
- Added scripts to commit and push changes to the repository after converting draw.io files.
- Implemented conflict resolution for CHANGELOG.csv during merges.
- Added retry logic for pushing changes to handle transient issues.
- Created a Teams notification system to inform about successful workflow completion.
- Implemented checks for changed .drawio files to trigger the conversion process.
- Cleaned up orphan processes after job completion.

--- a/.github/workflows/drawio-convert.yml
+++ b/.github/workflows/drawio-convert.yml
@@ -144,6 +144,9 @@ jobs:
               echo "Pushing ID assignment changes to branch ${{ github.ref_name }}..."
               # Using GITHUB_TOKEN for push
               git push "https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}.git" HEAD:${{ github.ref_name }}
+              
+              echo "Pulling latest changes to sync workspace after ID assignment push..."
+              git pull --rebase "https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}.git" ${{ github.ref_name }}
             else
               echo "No changes staged for commit, though NEW_IDS_WERE_ASSIGNED was true. This might indicate an issue or that changes were already committed by another process."
             fi
