--- a/.github/workflows/drawio-convert.yml
+++ b/.github/workflows/drawio-convert.yml
@@ -52,6 +52,7 @@ jobs:
 
       - name: Assign IDs to New Drawio Files
         run: |
+          set -ex # Enable verbose debugging and exit on error. MUST BE THE FIRST LINE.
           echo "============================================"
           echo "ASSIGNING IDS TO NEW DRAWIO FILES"
           echo "============================================"
@@ -89,30 +90,51 @@ jobs:
             echo "Running command: git diff --name-only --diff-filter=A ${{ github.event.before }} ${{ github.sha }} -- 'drawio_files/**/*.drawio'"
             
             TEMP_DIFF_OUTPUT_FILE=$(mktemp)
+            # Robust check for mktemp success
+            if [ -z "$TEMP_DIFF_OUTPUT_FILE" ] || [ ! -f "$TEMP_DIFF_OUTPUT_FILE" ]; then
+              echo "::error::Failed to create temporary file with mktemp. Path was: '$TEMP_DIFF_OUTPUT_FILE'"
+              exit 1
+            fi
+            echo "Temporary file created: ${TEMP_DIFF_OUTPUT_FILE}"
+            
             # Ensure git diff command errors are captured if any
             if ! git diff --name-only --diff-filter=A ${{ github.event.before }} ${{ github.sha }} -- 'drawio_files/**/*.drawio' > "${TEMP_DIFF_OUTPUT_FILE}"; then
-              echo "Error running git diff command. Output was:"
+              echo "Warning: git diff command exited with non-zero status. Output (if any) was:"
               cat "${TEMP_DIFF_OUTPUT_FILE}"
-              # Decide if you want to exit or continue with an empty list
+              # It's possible the command failed but still wrote to the file, or the file is empty.
+              # We'll proceed and let the file content check handle it.
             fi
             
-            echo "--- Start of git diff output ---"
+            echo "--- Start of git diff output (from ${TEMP_DIFF_OUTPUT_FILE}) ---"
             cat "${TEMP_DIFF_OUTPUT_FILE}"
-            echo "--- End of git diff output ---"
+            echo "--- End of git diff output (from ${TEMP_DIFF_OUTPUT_FILE}) ---"
+            echo "Details of temporary file ${TEMP_DIFF_OUTPUT_FILE}:"
+            ls -l "${TEMP_DIFF_OUTPUT_FILE}"
 
-            while IFS= read -r file; do
-              echo "Loop processing line from git diff output: '$file'"
-              if [[ -z "$file" ]]; then
-                echo "Skipping empty line from git diff output."
-                continue
-              fi
-              if [[ "$file" == drawio_files/* ]] && [[ "$file" == *.drawio ]]; then
-                echo "File '$file' matches criteria, adding to FILES_TO_PROCESS."
-                FILES_TO_PROCESS+=("$file")
-              else
-                echo "File '$file' from git diff output does NOT match 'drawio_files/*' and '*.drawio'. This is unexpected if pathspec is correct."
-              fi
-            done < "${TEMP_DIFF_OUTPUT_FILE}"
+            if [ ! -s "${TEMP_DIFF_OUTPUT_FILE}" ]; then # Check if file has size greater than zero
+                echo "Temporary file ${TEMP_DIFF_OUTPUT_FILE} is empty or does not exist. No files to process from diff."
+            else
+                echo "Temporary file ${TEMP_DIFF_OUTPUT_FILE} is NOT empty. Processing contents."
+                LOOP_ITERATIONS=0
+                while IFS= read -r file; do 
+                    LOOP_ITERATIONS=$((LOOP_ITERATIONS + 1))
+                    echo "Loop iteration: $LOOP_ITERATIONS. Raw line read: <<<${file}>>>"
+                    
+                    if [[ -z "$file" ]]; then 
+                        echo "Line read from temp file was empty. Skipping."
+                        continue
+                    fi
+
+                    echo "Processing file from diff: '$file'" # This echo is just before the potentially problematic line
+                    if [[ "$file" == drawio_files/* ]] && [[ "$file" == *.drawio ]]; then
+                        echo "File '$file' matches criteria, adding to FILES_TO_PROCESS."
+                        FILES_TO_PROCESS+=("$file")
+                    else
+                        echo "File '$file' from git diff output does NOT match 'drawio_files/*' and '*.drawio'."
+                    fi
+                done < "${TEMP_DIFF_OUTPUT_FILE}"
+                echo "Finished loop over diff output. Total iterations: $LOOP_ITERATIONS."
+            fi
             rm -f "${TEMP_DIFF_OUTPUT_FILE}"
           else
             # This handles initial commit to a repo, new branch push, or manual workflow_dispatch.
@@ -127,11 +149,23 @@ jobs:
             # List all files in the current commit's tree and filter for .drawio files in drawio_files/
             # These are considered "new" for ID assignment if they don't have an ID.
             # The existing ID check `if ! [[ "$original_basename" =~ \\ \\([0-9]{3}\\)$ ]]; then` will prevent re-renaming.
-            while IFS= read -r file; do
+            echo "Scanning with git diff-tree..."
+            TREE_LOOP_ITERATIONS=0
+            while IFS= read -r file || [ -n "$file" ]; do # Added || [ -n "$file" ] for robustness
+              TREE_LOOP_ITERATIONS=$((TREE_LOOP_ITERATIONS + 1))
+              echo "Tree Loop iteration: $TREE_LOOP_ITERATIONS. Raw line read: <<<${file}>>>"
+              if [[ -z "$file" ]]; then
+                echo "Skipping empty line from git diff-tree."
+                continue
+              fi
               if [[ "$file" == drawio_files/* ]] && [[ "$file" == *.drawio ]]; then
+                echo "File '$file' (from tree) matches criteria, adding to FILES_TO_PROCESS."
                 FILES_TO_PROCESS+=("$file")
+              else
+                echo "File '$file' (from tree) does NOT match criteria."
               fi
             done < <(git diff-tree --no-commit-id --name-only -r ${{ github.sha }} -- 'drawio_files/**/*.drawio')
+            echo "Finished tree loop. Total iterations: $TREE_LOOP_ITERATIONS."
           fi
 
           if [ ${#FILES_TO_PROCESS[@]} -eq 0 ]; then
