--- a/.github/workflows/drawio-convert.yml
+++ b/.github/workflows/drawio-convert.yml
@@ -51,6 +51,7 @@ jobs:
           echo "============================================"
 
       - name: Assign IDs to New Drawio Files
+        shell: bash # Explicitly set shell to bash
         run: |
           set -ex # Enable verbose debugging and exit on error. MUST BE THE FIRST LINE.
           echo "============================================"
@@ -179,12 +180,25 @@ jobs:
             echo "Finished tree loop (non-push). Total iterations: $TREE_LOOP_ITERATIONS."
           fi
 
-          echo "DEBUG: Determining if files need processing. FILES_TO_PROCESS count: ${#FILES_TO_PROCESS[@]}"
-          FILE_COUNT=${#FILES_TO_PROCESS[@]}
-          if (( FILE_COUNT == 0 )); then
-            echo "No new .drawio files found to process for ID assignment (FILE_COUNT is $FILE_COUNT)."
+          echo "DEBUG: FILES_TO_PROCESS array contents (first 5 elements if any):"
+          if ((${#FILES_TO_PROCESS[@]} > 0)); then
+            printf "'%s'\\n" "${FILES_TO_PROCESS[@]:0:5}"
+            if ((${#FILES_TO_PROCESS[@]} > 5)); then
+              echo "...and $((${#FILES_TO_PROCESS[@]} - 5)) more elements."
+            fi
           else
-            echo "Found $FILE_COUNT potential new .drawio file(s) to process:"
+            echo "(FILES_TO_PROCESS is empty)"
+          fi
+
+          echo "DEBUG: Determining if files need processing. Raw count from array: '${#FILES_TO_PROCESS[@]}'"
+          FILE_COUNT_AS_STRING="${#FILES_TO_PROCESS[@]}" # Use a new variable name
+          echo "DEBUG: FILE_COUNT_AS_STRING value before conditional: -->${FILE_COUNT_AS_STRING}<--"
+
+          # Using [[ ... ]] for the check, which is robust in bash
+          if [[ "$FILE_COUNT_AS_STRING" -eq 0 ]]; then
+            echo "No new .drawio files found to process for ID assignment (count was '$FILE_COUNT_AS_STRING')."
+          else
+            echo "Found $FILE_COUNT_AS_STRING potential new .drawio file(s) to process:"
             printf "%s\\n" "${FILES_TO_PROCESS[@]}"
 
             for file_path in "${FILES_TO_PROCESS[@]}"; do
