--- a/.github/workflows/drawio-convert.yml
+++ b/.github/workflows/drawio-convert.yml
@@ -194,8 +194,8 @@ jobs:
           FILE_COUNT_AS_STRING="${#FILES_TO_PROCESS[@]}" # Use a new variable name
           echo "DEBUG: FILE_COUNT_AS_STRING value before conditional: -->${FILE_COUNT_AS_STRING}<--"
 
-          # Using [[ ... ]] for the check, which is robust in bash
-          if [[ "$FILE_COUNT_AS_STRING" -eq 0 ]]; then
+          # Using [[ ... ]] for the check, which is robust in bash, comparing as string
+          if [[ "$FILE_COUNT_AS_STRING" == "0" ]]; then
             echo "No new .drawio files found to process for ID assignment (count was '$FILE_COUNT_AS_STRING')."
           else
             echo "Found $FILE_COUNT_AS_STRING potential new .drawio file(s) to process:"
