--- a/.github/workflows/drawio-convert.yml
+++ b/.github/workflows/drawio-convert.yml
@@ -193,13 +193,14 @@ jobs:
           echo "DEBUG: Determining if files need processing. Raw count from array: '${#FILES_TO_PROCESS[@]}'"
           FILE_COUNT_AS_STRING="${#FILES_TO_PROCESS[@]}" # Use a new variable name
           echo "DEBUG: FILE_COUNT_AS_STRING value is [${FILE_COUNT_AS_STRING}]"
+          echo "DEBUG: Hexdump of FILE_COUNT_AS_STRING (should be just 30 for zero):"
+          hexdump -C <<<"$FILE_COUNT_AS_STRING"
 
           # Using basic POSIX [ ... ] test with 'then' on a new line
-          if [ "${FILE_COUNT_AS_STRING}" -eq 0 ]
-          then
-            echo "No new .drawio files found to process for ID assignment (count was '${FILE_COUNT_AS_STRING}')."
+          if [ "$FILE_COUNT_AS_STRING" -eq 0 ]; then
+            echo "No new .drawio files found to process for ID assignment (count was '$FILE_COUNT_AS_STRING')."
           else
-            echo "Found ${FILE_COUNT_AS_STRING} potential new .drawio file(s) to process:"
+            echo "Found $FILE_COUNT_AS_STRING potential new .drawio file(s) to process:"
             printf "%s\\n" "${FILES_TO_PROCESS[@]}"
 
             for file_path in "${FILES_TO_PROCESS[@]}"; do
