--- a/.github/workflows/drawio-convert.yml
+++ b/.github/workflows/drawio-convert.yml
@@ -180,22 +180,24 @@ jobs:
             echo "Finished tree loop (non-push). Total iterations: $TREE_LOOP_ITERATIONS."
           fi
 
+          # Assign array length to variable for robust arithmetic checks
+          FILES_COUNT=${#FILES_TO_PROCESS[@]}
           echo "DEBUG: FILES_TO_PROCESS array contents (first 5 elements if any):"
-          if ((${#FILES_TO_PROCESS[@]} > 0)); then
-            printf "'%s'\\n" "${FILES_TO_PROCESS[@]:0:5}"
-            if ((${#FILES_TO_PROCESS[@]} > 5)); then
-              echo "...and $((${#FILES_TO_PROCESS[@]} - 5)) more elements."
+          if (( FILES_COUNT > 0 )); then
+            printf "'%s'\n" "${FILES_TO_PROCESS[@]:0:5}"
+            if (( FILES_COUNT > 5 )); then
+              echo "...and $((FILES_COUNT - 5)) more elements."
             fi
           else
             echo "(FILES_TO_PROCESS is empty)"
           fi
 
-          echo "DEBUG: Determining if files need processing. Raw count from array: '${#FILES_TO_PROCESS[@]}'"
-          if (( ${#FILES_TO_PROCESS[@]} == 0 )); then
+          echo "DEBUG: Determining if files need processing. Raw count from array: '$FILES_COUNT'"
+          if (( FILES_COUNT == 0 )); then
             echo "No new .drawio files found to process for ID assignment (count was 0)."
           else
-            echo "Found ${#FILES_TO_PROCESS[@]} potential new .drawio file(s) to process:"
-            printf "%s\\n" "${FILES_TO_PROCESS[@]}"
+            echo "Found $FILES_COUNT potential new .drawio file(s) to process:"
+            printf "%s\n" "${FILES_TO_PROCESS[@]}"
 
             for file_path in "${FILES_TO_PROCESS[@]}"; do
               echo "Processing file_path from FILES_TO_PROCESS array: '$file_path'" # Added log
@@ -210,7 +212,7 @@ jobs:
 
               # Check if filename already contains the ID pattern " (xxx)" at the end (before .drawio)
               # Regex: space, opening parenthesis, three digits, closing parenthesis, end of string.
-              if ! [[ "$original_basename" =~ \\ \\([0-9]{3}\\)$ ]]; then
+              if ! [[ "$original_basename" =~ \ \([0-9]{3}\)$ ]]; then
                 CURRENT_ID=$((CURRENT_ID + 1))
                 FORMATTED_ID=$(printf "%03d" "$CURRENT_ID")
                 
